:bug: fix crappy border in some covers

--- a/development/assets/notcss/01_atom/a-movie-cover.scss
+++ b/development/assets/notcss/01_atom/a-movie-cover.scss
@@ -4,7 +4,9 @@
 	overflow: hidden;
 
 	&__image {
-		width: 100%;
-		height: 100%;
+		height: 102%;
+		width: 102%;
+		margin-left: -1%;
+		margin-top: -1%;
 	}
 }
